List.of -> Collections.singletonList